[ch3751] Don t allow user to donate multiple monthly donations
https://app.clubhouse.io/enmarche/story/3751/emp%C3%AAcher-les-personnes-qui-font-d%C3%A9j%C3%A0-un-don-mensuel-d-en-faire-un-second

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -6,6 +6,8 @@ default:
                 - Behatch\Context\BrowserContext:
                     timeout: 3
                 - Behatch\Context\XmlContext
+                - Behatch\Context\DebugContext:
+                    screenshotDir: "var/cache/selenium/"
                 - FixtureContext:
                     manager: "@doctrine.orm.default_entity_manager"
                 - RestContext
